# pscr_s2

./: .gitignore  .gitmodules  CMakeLists.txt
inc/: main.hpp  threads.hpp  weather.hpp
src/: main.cpp  threads.cpp
